--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "pinia": "^2.0.28",
+    "swiper": "^9.1.1",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
     "vue-virtual-scroll-grid": "^1.10.1"
