--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "stylelint": "npx stylelint './src/**/*.{vue,scss}' --fix"
+    "stylelint": "npx stylelint './src/**/*.{vue,scss}' --fix",
+    "release": "standard-version"
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "standard-version": "^9.5.0",
     "swiper": "^9.1.1",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
